daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N17_insufficient_domain_count/T0.hex
826f6461796c696768742e7072652e7636b20006015840ad8cca780b2c54c65013e958a923e87f5b32e0a3d38c4d433c60160c49f19f197834848bc4f6943f66dba6f80cc233c192188d631c7a65e6fd99ad1776dafcc202010301040105020600071838080109781a6461796c696768742d76362d666978747572652d706f6c6963790a5840b4a87d01e56e675830709a2383da99606e26bf031efcad485e1d7d2ce0226d1c6782b5bcd66a26c7e05a788736893a8559f83608701e3f8f86e8993d05f370480b58407444a04a28b92d9585ce6e112f08f37a6293b57a45a7047e0fe9ccf30c1af80706414921735344927dda560550ea7e088f60072fa774f5ae4989ee4805e2a28b0cf60d584006e160e72f3d521d50d3ed069f6317dfebfd40bdc798e5eaa4b2902e0b414853e06b36fa48b966e865db0d6caec5a804a48d7963d6922f01438587a7b32db7120e584006e160e72f3d521d50d3ed069f6317dfebfd40bdc798e5eaa4b2902e0b414853e06b36fa48b966e865db0d6caec5a804a48d7963d6922f01438587a7b32db7120f584040272137b770ae6fd2b2882a144dff2de6c5db04c42980a8217235cf1003a54405f6a7d3544d95a503d3739d289d93bbc2fcfb4bb8325373e07f06a119daf8d510001101
